--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -13,9 +13,63 @@ body {
     flex-direction: column;
 }
 
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 10vh; */
+}
+
+.has-text-centered {
+    text-align: center;
+}
+
+.hidden-checkbox {
+    display: none;
+}
+
+.custom-checkbox {
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.styled-checkbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #444;
+    border: 2px solid #fff;
+    border-radius: 3px;
+    transition: background-color 0.3s;
+}
+
+.styled-checkbox:after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+}
+
+.hidden-checkbox:checked~.styled-checkbox {
+    background-color: #1E90FF;
+}
+
+.hidden-checkbox:checked~.styled-checkbox:after {
+    display: block;
+}
+
 .section {
     flex: 1;
-    height: 100%;
 
 }
 
@@ -40,7 +94,10 @@ body {
 }
 
 .card-wrapper {
-    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .control {
@@ -58,10 +115,17 @@ body {
 }
 
 .card {
-    margin: 1rem;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    width: 400px;
+    /* Set a fixed width for the card */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.card-header,
+.card-content,
+.card-footer {
+    padding: 15px;
 }
 
 .card-footer {
@@ -73,9 +137,6 @@ body {
 .btn-container {
     display: flex;
     justify-content: space-between;
-    margin-top: auto;
-    flex-wrap: wrap;
-    gap: 0.5rem;
 }
 
 .nav-btn,
@@ -91,6 +152,11 @@ body {
     background-color: rgb(149, 149, 233);
 }
 
+.nav-btn {
+    flex-grow: 1;
+    margin: 0 5px;
+}
+
 .box {
     background-color: transparent;
     box-shadow: none;
@@ -98,12 +164,15 @@ body {
 }
 
 .card-text {
-    margin: 1rem;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .container {
-    position: relative;
-    min-height: calc(100vh - 50px);
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Responsive styles */
