--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,15 +1,19 @@
 <%- include('partials/header', {title: 'Quiz Time!', style: './css/quiz.css'})
 %>
 
-<!-- <section class="section"> -->
-<div class="container">
-  <div class="box">
-    <div class="field">
-      <label class="label" for="categoryFilter">Filter by Category:</label>
-      <div class="control">
-        <div class="select is-fullwidth">
-          <select id="categoryFilter" name="categoryFilter" multiple>
-            <option value="">All Categories</option>
+<section class="section">
+  <div class="container">
+    <div class="box">
+      <div class="field">
+        <label class="label" for="categoryFilter">Filter by Category:</label>
+        <div class="control">
+          <select
+            id="categoryFilter"
+            name="categoryFilter"
+            class="select2"
+            multiple
+          >
+            <!-- <option value="">All Categories</option> -->
             <% categories.forEach(function(category, index) { %>
             <option value="<%= category.value %>"><%= category.name %></option>
             <% }); %>
@@ -17,48 +21,52 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="box">
-    <div class="has-text-centered">
-      <label class="checkbox has-text-white" for="showAnswersCheckbox">
-        <input type="checkbox" id="showAnswersCheckbox" />
-        Show Answers
-      </label>
-    </div>
-  </div>
-  <div class="card-wrapper">
-    <div class="card">
-      <header class="card-header">
-        <p id="question" class="card-header-title"></p>
-      </header>
-      <div class="card-content">
-        <p id="answer" class="card-text answer hide"></p>
+    <div class="box">
+      <div class="has-text-centered">
+        <label class="custom-checkbox" for="showAnswersCheckbox">
+          <input
+            type="checkbox"
+            id="showAnswersCheckbox"
+            class="hidden-checkbox"
+          />
+          <span class="styled-checkbox"></span>
+          Show Answers
+        </label>
       </div>
-      <footer class="card-footer">
-        <div class="btn-container">
-          <button
-            id="prev-question"
-            class="nav-btn button is-rounded"
-            style="background-color: #ee6c4d"
-          >
-            Prev
-          </button>
-          <button id="show-answer" class="answer-btn button is-rounded">
-            Show Answer
-          </button>
-          <button
-            id="next-question"
-            class="nav-btn button is-rounded"
-            style="background-color: #ee6c4d"
-          >
-            Next
-          </button>
+    </div>
+    <div class="card-wrapper">
+      <div class="card">
+        <header class="card-header">
+          <p id="question" class="card-header-title"></p>
+        </header>
+        <div class="card-content">
+          <p id="answer" class="card-text answer hide"></p>
         </div>
-      </footer>
+        <footer class="card-footer">
+          <div class="btn-container">
+            <button
+              id="prev-question"
+              class="nav-btn button is-rounded"
+              style="background-color: #ee6c4d"
+            >
+              Prev
+            </button>
+            <button id="show-answer" class="answer-btn button is-rounded">
+              Show Answer
+            </button>
+            <button
+              id="next-question"
+              class="nav-btn button is-rounded"
+              style="background-color: #ee6c4d"
+            >
+              Next
+            </button>
+          </div>
+        </footer>
+      </div>
     </div>
   </div>
-</div>
-<!-- </section> -->
+</section>
 
 <script src="js/quiz.js"></script>
 <%- include('./partials/footer') %>
