--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/header', {title: 'Add New Questions', style:
 '../css/customquestions.css'}) %>
 <div style="display: flex; flex-direction: column; min-height: 100vh">
+  <div class="notification-container"></div>
   <section class="section">
     <div class="container">
       <h1 class="title has-text-centered">Add A Question</h1>
