--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,15 +7,13 @@ style:'../css/main.css'}) %>
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
           <div class="column is-12">
-            <h1 class="title is-1">Captain's Upgrade Journey</h1>
+            <h1 class="title is-1">The Captain's Climb: Scaling Success</h1>
             <br />
-            <p class="subtitle">
-              Navigating to Success with Your Personal Upgrade Companion!
-            </p>
+            <p class="subtitle">"Ascend to Excellence"</p>
             <p class="mb-0">Developed By: Andrew Butler</p>
             <br />
             <hr class="divider" />
-            <p class="mb-0">Version 1.0.0 | Released 4.9.23</p>
+            <p class="mb-0">Version 1.1.0 | Released 4.25.23</p>
           </div>
         </div>
       </div>
