--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer style="background-color: #98c1d9; height: 100%;"> 
-  <p class="is-size-6.5 has-text-centered footer-text"><strong>Upgrade Journey</strong></p> 
+<footer style="background-color: none; height: 100%;"> 
+  <p class="is-size-6.5 has-text-centered footer-text"><strong>Captain's Climb</strong></p> 
     <p class="is-size-6.5 has-text-centered footer-text" style="margin-bottom: 10px;">by Andrew Butler | &copy 2023 </p>
 </footer>
 </body>
