--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
-          <h1 class="is-size-4 has-text-weight-bold" style="color: #3d5a80;">Upgrade Journey</h1>
+          <h1 class="is-size-4 has-text-weight-bold" style="color: #3d5a80;">Captain's Climb</h1>
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
