--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,10 @@ style:'../css/main.css'}) %>
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
           <div class="column is-12">
-            <h1 class="title is-1">The Captain's Climb: Scaling Success</h1>
+            <h1 class="title">The Captain's Climb: Scaling Success</h1>
             <br />
             <p class="subtitle">"Ascend to Excellence"</p>
-            <p class="mb-0">Developed By: Andrew Butler</p>
+
             <br />
             <hr class="divider" />
             <p class="mb-0">Version 1.1.0 | Released 4.25.23</p>
@@ -20,5 +20,3 @@ style:'../css/main.css'}) %>
     </div>
   </section>
 </div>
-
-<%- include('partials/footer') %>
