added the flows route

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,16 @@
-<footer style="background-color: none; height: 100%;"> 
+<!-- <footer style="background-color: none; height: 100%;"> 
   <p class="is-size-6.5 has-text-centered footer-text"><strong>Captain's Climb</strong></p> 
     <p class="is-size-6.5 has-text-centered footer-text" style="margin-bottom: 10px;">by Andrew Butler | &copy 2023 </p>
+</footer> -->
+
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>Captain's Climb</strong> by
+      <a href="https://andrewfbutler.com">Andrew Butler</a> | &copy 2023 | The source code is
+      licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+    </p>
+  </div>
 </footer>
 </body>
 </html>
