--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title: 'Upgrade Journey',
+<%- include('partials/header', {title: "Captain's Climb",
 style:'../css/main.css'}) %>
 
 <div id="page-wrapper">
