--- a/public/css/flows.css
+++ b/public/css/flows.css
@@ -2,3 +2,31 @@
     border: 1px solid red;
     height: 200px;
 }
+
+h5 {
+    font-size: 0.8rem;
+    font-weight: 900;
+}
+
+ul {
+    list-style-type: square;
+}
+
+li {
+    margin-left: 20px;
+    font-size: 0.8rem;
+}
+
+.right-side {
+    float: right;
+    font-weight: 600;
+}
+
+.small-note {
+    font-size: 0.7rem;
+}
+
+.small-note-item {
+    margin-left: 40px;
+    font-size: 0.5rem;
+}
