--- a/views/flows.ejs
+++ b/views/flows.ejs
@@ -3,127 +3,149 @@
 <div class="tile is-ancestor">
   <div class="tile is-parent">
     <article class="tile is-child box">
-      <p class="title">Hello World</p>
-      <p class="subtitle">What is up?</p>
-    </article>
-  </div>
-  <div class="tile is-parent">
-    <article class="tile is-child box">
-      <p class="title">Foo</p>
-      <p class="subtitle">Bar</p>
-    </article>
-  </div>
-  <div class="tile is-parent">
-    <article class="tile is-child box">
-      <p class="title">Third column</p>
-      <p class="subtitle">With some content</p>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-          magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-          sem. Etiam finibus odio quis feugiat facilisis.
+      <p class="title">Originating Flow</p>
+      <hr />
+      <h5>MCDU</h5>
+      <ul>
+        <li>Electronic CBs - Checked</li>
+        <li>NAV IDENT - Verify</li>
+        <li>POS INIT - Initialize Position in MCDU (if needed)</li>
+      </ul>
+      <h5>DVDR CONTROL PANEL</h5>
+      <ul>
+        <li>Press TEST and verify no EICAS messages</li>
+      </ul>
+      <h5>ELECTRIC AC POWER</h5>
+      <ul>
+        <li>IDG 1 Selector <span class="right-side">AUTO</span></li>
+        <li>IDG 2 Selector <span class="right-side">AUTO</span></li>
+        <li>GPU <span class="right-side">AS REQUIRED</span></li>
+        <p class="small-note">
+          When the AVAIL light is illuminated and ground power usage
+          appropriate:
         </p>
-      </div>
-    </article>
-  </div>
-</div>
+        <li class="small-note-item">GPU <span class="right-side">IN</span></li>
 
-<div class="tile is-ancestor">
-  <div class="tile is-vertical is-8">
-    <div class="tile">
-      <div class="tile is-parent is-vertical">
-        <article class="tile is-child box">
-          <p class="title">Vertical tiles</p>
-          <p class="subtitle">Top box</p>
-        </article>
-        <article class="tile is-child box">
-          <p class="title">Vertical tiles</p>
-          <p class="subtitle">Bottom box</p>
-        </article>
-      </div>
-      <div class="tile is-parent">
-        <article class="tile is-child box">
-          <p class="title">Middle box</p>
-          <p class="subtitle">With an image</p>
-          <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png" />
-          </figure>
-        </article>
-      </div>
-    </div>
-    <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p class="title">Wide column</p>
-        <p class="subtitle">Aligned with the right column</p>
-        <div class="content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas
-            non massa sem. Etiam finibus odio quis feugiat facilisis.
-          </p>
-        </div>
-      </article>
-    </div>
-  </div>
-  <div class="tile is-parent">
-    <article class="tile is-child box">
-      <div class="content">
-        <p class="title">Tall column</p>
-        <p class="subtitle">With even more content</p>
-        <div class="content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-            semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum
-            volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi
-            maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis
-            semper odio felis ut quam.
-          </p>
-          <p>
-            Suspendisse varius ligula in molestie lacinia. Maecenas varius eget
-            ligula a sagittis. Pellentesque interdum, nisl nec interdum maximus,
-            augue diam porttitor lorem, et sollicitudin felis neque sit amet
-            erat. Maecenas imperdiet felis nisi, fringilla luctus felis
-            hendrerit sit amet. Aenean vitae gravida diam, finibus dignissim
-            turpis. Sed eget varius ligula, at volutpat tortor.
-          </p>
-          <p>
-            Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus
-            erat, vitae congue lectus dolor consequat libero. Donec leo ligula,
-            maximus et pellentesque sed, gravida a metus. Cras ullamcorper a
-            nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero.
-            Quisque non semper leo.
-          </p>
-        </div>
-      </div>
-    </article>
-  </div>
-</div>
+        <li>AC BUS TIES Selector <span class="right-side">AUTO</span></li>
+        <li>APU GEN <span class="right-side">IN</span></li>
+      </ul>
+      <h5>ELECTRIC DC POWER</h5>
+      <ul>
+        <li>TRU 1 <span class="right-side">AUTO</span></li>
+        <li>TRU ESS <span class="right-side">AUTO</span></li>
+        <li>TRU 2<span class="right-side">AUTO</span></li>
+        <li>BATT 1 Selector<span class="right-side">ON</span></li>
+        <li>DC BUS TIES<span class="right-side">AUTO</span></li>
+        <li>BATT 2 Selector<span class="right-side">AUTO</span></li>
+      </ul>
+      <h5>COCKPIT LIGHTS</h5>
+      <ul>
+        <li>
+          MAIN, OVHD & PEDST KNOBS
+          <span class="right-side">AS REQUIRED</span>
+        </li>
+        <li>ANNUNC TEST Btn<span class="right-side">Press</span></li>
+        <p class="small-note">
+          Pushbutton striped bars and caption indicators<span class="right-side"
+            >Check</span
+          >
+        </p>
 
-<div class="tile is-ancestor">
-  <div class="tile is-parent">
-    <article class="tile is-child box">
-      <p class="title">Side column</p>
-      <p class="subtitle">With some content</p>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-          magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-          sem. Etiam finibus odio quis feugiat facilisis.
+        <li>DOME <span class="right-side">AS REQUIRED</span></li>
+      </ul>
+      <h5>FUEL</h5>
+      <ul>
+        <li>XFEED Selector<span class="right-side">OFF</span></li>
+        <li>DC PUMP Selector<span class="right-side">AUTO</span></li>
+        <li>AC PUMP 1 Selector<span class="right-side">AUTO</span></li>
+        <li>AC PUMP 2 Selector<span class="right-side">AUTO</span></li>
+      </ul>
+      <h5>PASSENGER SIGNS</h5>
+      <ul>
+        <li>EMER Lt Selector<span class="right-side">Checked</span></li>
+        <p
+          class="small-note"
+          style="margin-left: 40px; list-style-type: square"
+        >
+          EMER Lt. Selector<span class="right-side">ON</span>
         </p>
-      </div>
+        <p class="small-note-item">
+          Ensure EMER Lt. ON and EMER LT NOT ARMED EICAS message annunciate
+        </p>
+        <li>EMER Lt. Selector<span class="right-side">ARMED</span></li>
+        <li>STERILE<span class="right-side">OFF</span></li>
+        <li>NO SMOKING<span class="right-side">ON</span></li>
+        <li>FSTN BELTS<span class="right-side">OFF</span></li>
+      </ul>
     </article>
   </div>
-  <div class="tile is-parent is-8">
+  <div class="tile is-parent">
     <article class="tile is-child box">
-      <p class="title">Main column</p>
-      <p class="subtitle">With some content</p>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-          magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-          sem. Etiam finibus odio quis feugiat facilisis.
+      <p class="title">Before Start Flow</p>
+      <hr />
+      <h5>PARKING BRAKE ON<span class="right-side">ON</span></h5>
+      <p class="small-note">Verify parking brake light is illuminated</p>
+      <h5>CREW O2<span class="right-side">CHECK</span></h5>
+      <ul>
+        <p class="small-note">
+          Check mask flow before each flight. Check O2 qty. on MFD status.
         </p>
-      </div>
+        <li>Green for three crewmembers</li>
+        <li>Cyan for two crewmembers</li>
+        <li>Amber requires service</li>
+      </ul>
+      <h5>PFD<span class="right-side">CHECK</span></h5>
+      <ul>
+        <li>FMA: Clear</li>
+        <li>Airspeed Tape: No speed indicated</li>
+        <li>EADI: Level and no flags</li>
+        <li>ALT SEL: Confirm initial altitude</li>
+        <li>VSI: Near 0</li>
+        <li>Heading Bug: Set to heading of runway</li>
+        <li>HSI: Dep course and NAV source</li>
+      </ul>
+      <h5>MFD<span class="right-side">CHECK</span></h5>
+      <ul>
+        Check green:
+        <li>Engine Oil Level</li>
+        <li>Emer Brake Accumulator Level</li>
+        <p class="small-note">
+          Set/Verify MFD options: Radar, TCAS, Navaids, Terrain, Waypoints, etc.
+        </p>
+      </ul>
+      <h5>EICAS<span class="right-side">CHECK</span></h5>
+      <ul>
+        <p class="small-note">
+          Compare release fuel to fuel on board and verify within balance.
+        </p>
+      </ul>
+      <h5>FSTN BELTS Sign<span class="right-side">ON</span></h5>
+    </article>
+  </div>
+  <div class="tile is-parent">
+    <article class="tile is-child box">
+      <p class="title">Engine Start Flow</p>
+      <hr />
+      <h5>SEATBELTS/HARNESSES<span class="right-side">ON</span></h5>
+      <li>
+        Ensure seatbelts and shoulder harnesses are secured, rudder pedals and
+        seat are properly adjusted. If the jumpseat is occupied, ensure the ACMs
+        seat belt and shoulder harness are secured.
+      </li>
+      <h5>AUTOBRAKE<span class="right-side">RTO</span></h5>
+      <h5>STERILE SIGN<span class="right-side">ON</span></h5>
+      <h5>DOORS/WINDOWS<span class="right-side">CLOSED&LOCKED</span></h5>
+      <li>
+        Verify the window is closed and locked, the flight deck door is closed
+        and locked, the cockpit door control unlocked light is out and all doors
+        show green on the status page.
+      </li>
+      <h5>PARKING BRAKE<span class="right-side">As Req</span></h5>
+      <li>
+        DO NOT release parking brake without verification from the ground crew.
+      </li>
+      <h5>STEERING<span class="right-side">OFF</span></h5>
+      <li>Verify the STEER OFF message is shown on the EICAS</li>
     </article>
   </div>
 </div>
