fixed a couple styling issues

--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header', {title: 'View All Questions', style:
 '../css/customquestions.css'}) %>
 <section class="section">
-  <h1 class="has-text-centered is-size-1-tablet">All Questions</h1>
+  <h1 class="has-text-centered is-size-1-tablet">---- All Questions ----</h1>
   <div class="container">
     <p class="has-text-centered is-size-5">
       Total Questions: <%= questions.length %>
