--- a/views/flows.ejs
+++ b/views/flows.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header', {title: 'Captain Flows', style:
 '../css/flows.css'}) %>
 <div class="tile is-ancestor">
-  <div class="tile is-parent">
+  <div class="tile is-parent is-vertical">
     <article class="tile is-child box">
       <p class="title">Originating Flow</p>
       <hr />
@@ -79,7 +79,7 @@
       </ul>
     </article>
   </div>
-  <div class="tile is-parent">
+  <div class="tile is-parent is-vertical">
     <article class="tile is-child box">
       <p class="title">Before Start Flow</p>
       <hr />
@@ -122,7 +122,7 @@
       <h5>FSTN BELTS Sign<span class="right-side">ON</span></h5>
     </article>
   </div>
-  <div class="tile is-parent">
+  <div class="tile is-parent is-vertical">
     <article class="tile is-child box">
       <p class="title">Engine Start Flow</p>
       <hr />
