--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,8 +16,14 @@
     <script src="https://kit.fontawesome.com/082eaaba14.js" crossorigin="anonymous"></script>
     <script src="/js/navbar.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/css/select2.min.css" />
+    
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/select2.min.js"></script>
+
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 
     <style>
       .navbar-item h3 {
