--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -32,6 +32,15 @@
           <span class="styled-checkbox"></span>
           Show Answers
         </label>
+        <label class="custom-checkbox" for="randomizeCheckbox">
+          <input
+            type="checkbox"
+            id="randomizeCheckbox"
+            class="hidden-checkbox"
+          />
+          <span class="styled-checkbox"></span>
+          Randomize
+        </label>
       </div>
     </div>
     <div class="card-wrapper">
