--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -44,7 +44,7 @@
           </header>
           <div class="card-content">
             <div class="content">
-              <p><%= note.content %></p>
+              <p><%- note.content %></p>
             </div>
           </div>
         </div>
