--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -3,7 +3,7 @@
 <section class="section">
   <h1 class="has-text-centered is-size-1-tablet">---- All Questions ----</h1>
   <div class="container">
-    <p class="has-text-centered is-size-5">
+    <p class="has-text-centered is-size-5 total-questions">
       Total Questions: <%= questions.length %>
     </p>
     <br />
