--- a/public/css/customquestions.css
+++ b/public/css/customquestions.css
@@ -9,11 +9,19 @@ html, body {
     min-height: 100vh;
     /* background-color: #98c1d9; */
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
-    color: #fff;
+
 }
 
 .section {
     flex: 1;
+}
+
+.select select option {
+    color: #000;
+}
+
+.select2 {
+    color: #000;
 }
 
 #create-question-btn {
