--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,6 +2,11 @@
 %>
 
 <section class="section">
+  <div class="progress-container" id="progress-container">
+    <span id="question-count"></span>
+    <div id="progress-bar" class="progress-bar"></div>
+  </div>
+
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-one-third">
