--- a/public/css/view-notes.css
+++ b/public/css/view-notes.css
@@ -6,7 +6,14 @@ body {
     min-height: 100vh;
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
-    background-color: #98c1d9;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.title {
+    color: white;
 }
 
 .section {
@@ -50,4 +57,9 @@ body {
     z-index: 3;
     color: #000;
     opacity: 1;
+}
+
+footer p {
+    color: #000;
+    font-size: 0.6rem;
 }
