minor style modifications

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -48,6 +48,21 @@
                   </button>
                 </div>
               </div>
+              <div class="field">
+                <div class="control">
+                  <div
+                    id="google-signin-button"
+                    class="button is-fullwidth"
+                    style="
+                      background-color: #4285f4;
+                      font-size: 1.5rem;
+                      color: #fff;
+                    "
+                  >
+                    Login with Google
+                  </div>
+                </div>
+              </div>
             </form>
           </div>
         </div>
