--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -3,7 +3,6 @@
 
 <section class="section">
   <div class="progress-container" id="progress-container">
-    <span id="question-count"></span>
     <div id="progress-bar" class="progress-bar"></div>
   </div>
 
@@ -48,6 +47,12 @@
               <span class="styled-checkbox"></span>
               Randomize
             </label>
+            <br />
+            <hr />
+            <span
+              id="question-count"
+              style="font-size: 1.3rem; color: #000"
+            ></span>
           </div>
         </div>
         <div class="card">
