--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,10 +2,6 @@
 %>
 
 <section class="section">
-  <div class="progress-container" id="progress-container">
-    <div id="progress-bar" class="progress-bar"></div>
-  </div>
-
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-one-third">
@@ -49,14 +45,17 @@
             </label>
             <br />
             <hr />
-            <span
-              id="question-count"
-              style="font-size: 1.3rem; color: #000"
-            ></span>
+            <div class="progress-container" id="progress-container">
+              <div id="progress-bar" class="progress-bar"></div>
+            </div>
           </div>
         </div>
         <div class="card">
           <div class="question-container">
+            <span
+              id="question-count"
+              style="font-size: 1rem; color: #000; padding: 10px"
+            ></span>
             <p id="question" class="card-header-title"></p>
           </div>
           <hr />
@@ -98,4 +97,3 @@
 </section>
 
 <script src="js/quiz.js"></script>
-<%- include('./partials/footer') %>
