--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title: "Captain's Climb",
+<%- include('partials/header', {title: "Upgrade Me | 2023",
 style:'../css/main.css'}) %>
 
 <div id="page-wrapper">
@@ -7,7 +7,7 @@ style:'../css/main.css'}) %>
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
           <div class="column is-12">
-            <h1 class="title">The Captain's Climb: Scaling Success</h1>
+            <h1 class="title">Upgrade Me: Scaling Success</h1>
             <br />
             <p class="subtitle">"Ascend to Excellence"</p>
 
