--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,7 +49,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
-          <h1 class="is-size-4 has-text-weight-bold" style="color: #000;">Captain's Climb</h1>
+          <h1 class="is-size-4 has-text-weight-bold" style="color: #000;">Upgrade Me</h1>
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
