--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,32 @@ style:'../css/main.css'}) %>
             <br />
             <hr class="divider" />
             <p class="mb-0">Version 1.1.0 | Released 4.25.23</p>
+            <p class="mb-0">Copyright 2023</p>
+            <div class="container legal-container">
+              <p class="mb-0 legal">
+                <strong class="bold">Legal Disclaimer:</strong>The information
+                provided on Upgrademe.pro is for general informational purposes
+                only. All information on the site is provided in good faith,
+                however, we make no representation or warranty of any kind,
+                express or implied, regarding the accuracy, adequacy, validity,
+                reliability, availability, or completeness of any information on
+                the site. The information on Upgrademe.pro is not intended to
+                serve as, and should not be construed as, professional advice or
+                recommendations from official sources. Users of Upgrademe.pro
+                are solely responsible for verifying the accuracy and validity
+                of any information they encounter on the site before relying on
+                it or using it for any purpose. Under no circumstance shall we
+                have any liability to you for any loss or damage of any kind
+                incurred as a result of the use of the site or reliance on any
+                information provided on the site. Your use of the site and your
+                reliance on any information on the site is solely at your own
+                risk. By using Upgrademe.pro, you hereby agree to these terms
+                and conditions and acknowledge that the information provided on
+                the site is for personal use only and should not be construed to
+                be from any official source.
+              </p>
+              <p class="legal">The source code is licensed MIT</p>
+            </div>
           </div>
         </div>
       </div>
