--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+    <meta name="title" content="Upgrade Me - Improve Your Skills with Quizzes, Briefings, and Notes">
+    <meta name="description" content="Upgrade Me is an interactive platform designed to help you improve your skills through engaging quizzes, informative briefings, and helpful notes. Sign up today and start upgrading your knowledge!">
+    <meta name="keywords" content="Upgrade Me, Quiz, Briefings, Notes, Questions, Flows, Weather, Knowledge, Skills, Learning">
+    <meta property="og:title" content="Upgrade Me - Improve Your Skills with Quizzes, Briefings, and Notes">
+    <meta property="og:description" content="Upgrade Me is an interactive platform designed to help you improve your skills through engaging quizzes, informative briefings, and helpful notes. Sign up today and start upgrading your knowledge!">
+    <meta property="og:image" content="https://">
+    <meta property="og:url" content="https://">
+    <meta property="og:type" content="website">
+    
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
