--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,6 +37,20 @@ html, body {
 
 }
 
+.bold {
+    font-weight: 900;
+    color: #fff;
+}
+
+.legal {
+    margin-top: 100px;
+    font-size: 0.5rem;
+}
+
+.legal-container {
+    width: 50%;
+}
+
 .title {
     font-size: 3rem;
 }
